--- a/Calculadora/style.css
+++ b/Calculadora/style.css
@@ -120,3 +120,19 @@ button.clicado:hover {
     background: linear-gradient(310deg, rgb(32, 32, 32), rgb(53, 53, 53), rgb(88, 88, 88));
     transition: .2s ease ;
 }
+@media screen and (max-width: 400px) {
+    body {
+        margin: 0;
+    }
+    main {
+        width: 100vw;
+        height: 100vh;
+        margin: 0 auto;
+        backdrop-filter: none;
+        -webkit-backdrop-filter: none;
+    }
+    #geral {
+        width: 80%;
+        margin: 25px auto;
+    }
+}
