--- a/GeradorDeSenhas/style.css
+++ b/GeradorDeSenhas/style.css
@@ -12,6 +12,8 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    font-family: 'Montserrat', sans-serif;
+
 }
 .flex {
     display: flex;
@@ -20,7 +22,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 300px;
+    min-width: 400px;
     height: 90vh;
 }
 .content {
@@ -33,7 +35,7 @@ body {
     background-color: var(--bgInput);
     width: 100%;
     height: 2em;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 10px;
 }
@@ -46,6 +48,7 @@ body {
     gap: 10px;
     box-shadow: 2px 2px 5px 10px rgba(26, 26, 26, 0.103);
     justify-content: center;
+    font-weight: 300;
 }
 .length {
     width: 100%;
@@ -56,4 +59,40 @@ body {
 #quantity {
     float: right;
     padding-right: 15px;
+}
+#textRandom {
+    background-color: var(--bgInput);
+    outline: none;
+    border: none;color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+}
+footer {
+    justify-content: center;
+    align-items: center;
+    min-width: 300px;
+    width: auto;
+}
+a {
+    text-decoration: none;
+}
+button {
+    width: max-content;
+    padding: 4px 15px;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+}
+#copy {
+    background: transparent;
+    color: white;
+}
+#copy:hover, #generate:hover {
+    cursor: pointer;
+}
+#generate {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 4px 20px;
 }
